
	* CYGWIN-PATCHES/README,
	  lib/Makefile.am,
	  lib/gst-plugins0.8.cygclass,
	  lib/gst-plugins0.10.cygclass,
	  lib/gstreamer.cygclass:
	Create a new gstreamer cygclass which can be used by both gst-plugins
	as well as other GStreamer packages.

	* lib/gtkmm.cygclass (gtkmm_autoreconf):
	Use cygautoreconf NO_AUTOHEADER.

	* bin/cygport.in (cygautoreconf):
	Accept NO_AUTO* variables to not use certain tools during autoreconf-2.5;
	the most common use will be NO_AUTOHEADER.

	* CYGWIN-PATCHES/README, configure.ac:
	Post-release version bump.

**** 0.2.3 *****

	* bin/cygport.in (pkg_binpkg, pkg_dist):
	If undefined, PKG_HINTS defaults to PKG_NAMES with split packages.
	CYGWIN-PATCHES/*.list files can be used instead of PKG_CONTENTS.

	* lib/gst-plugins0.8.cygclass:
	Fix the dependency locations for 0.8.
	Use PATH instead of LD_LIBRARY_PATH for the postinstall.

	* lib/ruby-gnome2.cygclass (ruby_gnome2_install):
	Derive correct name of implib from extconf.rb.

	* bin/prep_gconf_schemas.sh:
	GConf-2.14 shouldn't require the shutdown/kill commands anymore.

	* lib/gst-plugins0.10.cygclass:
	Add support for Fluendo plugins.

	* lib/gst-plugins0.8.cygclass:
	Define DEPS_PATH, as 0.8 plugins can depend on others.
	Build gconf and oss as part of the base plugins package.
	Pass LD_LIBRARY_PATH to gst-register.

	* TODO, 
	  lib/Makefile.am,
	  lib/gst-plugins.cygclass,
	  lib/gst-plugins0.8.cygclass,
	  lib/gst-plugins0.10.cygclass:
	Switch to versioned gst-plugins0.x cygclasses, and make gst-plugins
	a wrapper which inherits the correct version, based on ${PV_MAJ_MIN}.

	* bin/cygport.in (unpack):
	Handle all files which aren't archives nor GPG sigs with cp -t.
	Provide a default SRC_DIR of ${P}.

	* bin/cygport.in (cygconf, cyginstall),
	  lib/gnome2.cygclass (gnome2_compile):
	Change default localstatedir to /var.
	Override to /var/lib in gnome2 for scrollkeeper compatibility.

	* bin/cygport.in (src_prep, pkg_srcpkg):